sumo/tests/dfrouter/errors/detector_files/false_detectors_file3/options.dfrouter
--net-file=input_messstrecke.net.xml --detector-files=xxx.det.xml,input_messstrecke.det.xml,xxx.det.xml --detector-output detectors_def.det.xml

